Bugfix: Fix stylesheet issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: gray !important;
+    background-color: lightskyblue !important;
     font-family: 'AR One Sans', sans-serif;
     
 }
